# log-sentinel

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
backend/: .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260304_01_add_name_to_ingest_tokens.py  20260305_01_llm_per_tenant_credits.py  20260306_01_fix_suggestion_analyses.py  20260307_01_chat_sessions.py  20260307_02_llm_usage_refactor.py  20260307_03_plan_credits_lim.py
backend/logs_sentinel/: __init__.py  main.py
backend/logs_sentinel/api/v1/: __init__.py
backend/logs_sentinel/application/: __init__.py
backend/logs_sentinel/application/dto/: auth.py
backend/logs_sentinel/application/ports/: __init__.py  chat_tools.py
backend/logs_sentinel/application/services/: ai_insights_service.py  ai_service.py  alerts_service.py  auth_service.py  billing_service.py  chat_service.py  chat_tools_service.py  ingestion_service.py  issue_service.py  logs_service.py  metrics_service.py  projects_service.py
backend/logs_sentinel/domains/: __init__.py
backend/logs_sentinel/domains/ai/: __init__.py  entities.py  repositories.py
backend/logs_sentinel/domains/ai_insights/: __init__.py  entities.py  fingerprinting.py  heuristics.py  repositories.py
backend/logs_sentinel/domains/alerts/: __init__.py  entities.py  repositories.py
backend/logs_sentinel/domains/billing/: entities.py  repositories.py
backend/logs_sentinel/domains/chat/: __init__.py  entities.py  repositories.py
backend/logs_sentinel/domains/identity/: __init__.py  entities.py  repositories.py
backend/logs_sentinel/domains/ingestion/: __init__.py  entities.py  normalization.py  repositories.py
backend/logs_sentinel/domains/issues/: __init__.py  entities.py  repositories.py
backend/logs_sentinel/domains/logs/: __init__.py  entities.py  repositories.py
backend/logs_sentinel/domains/metrics/: __init__.py  entities.py  repositories.py
backend/logs_sentinel/domains/projects/: __init__.py  entities.py  repositories.py
backend/logs_sentinel/infrastructure/agents/: __init__.py  chat.py  chat_session_title.py  issue_enrichment.py  schemas.py  suggest_fix.py  suggest_issue.py
backend/logs_sentinel/infrastructure/auth/: jwt.py
backend/logs_sentinel/infrastructure/cache/: redis_rate_limiter.py
backend/logs_sentinel/infrastructure/db/: base.py  models.py
backend/logs_sentinel/infrastructure/llm/: null_client.py  openai_client.py
backend/logs_sentinel/infrastructure/messaging/: celery_app.py  celery_ingest_queue.py
backend/logs_sentinel/infrastructure/notifications/: slack.py
backend/logs_sentinel/infrastructure/settings/: config.py
backend/logs_sentinel/tests/: __init__.py  conftest.py  factories.py  test_ai_insights_fix_suggestions.py  test_alerts_evaluation.py  test_auth_tokens.py  test_billing_usage.py  test_chat.py  test_domains_ingestion.py  test_ingest_router.py  test_ingestion_service.py  test_ingestion_tokens.py  test_issue_upsert.py  test_logs_router.py  test_metrics_router.py  test_normalization.py  test_schemas.py  test_tenant_isolation.py
backend/logs_sentinel/tests/api/: __init__.py  test_ai_insights_router.py  (+10 more)
backend/logs_sentinel/utils/: dateutils.py  lang.py  prompts.py  severity.py
backend/scripts/: seed_dev_data.py
(+121 files in other folders)
