[project]
name = "logs-sentinel-backend"
version = "0.1.0"
description = "LogSentinel backend - multi-tenant intelligent log monitoring API"
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "LogSentinel", email = "dev@example.com" }]
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "psycopg[binary,pool]>=3.2.0",
    "redis>=5.0.0",
    "celery[redis,rabbitmq]>=5.4.0",
    "argon2-cffi>=23.1.0",
    "pyjwt[crypto]>=2.8.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.1.0",
    "structlog>=24.0.0",
    "prometheus-client>=0.20.0",
    "httpx>=0.27.0",
    "typing-extensions>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.12.0",
    "ruff>=0.7.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["logs_sentinel"]

[tool.uv]
index-url = "https://pypi.org/simple"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true

